Change version to beta

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
     <div class="row" style="margin-top: 25%">
       <div class="column">
         <h1>JudoAssistant</h1>
-        <p>JudoAssistant is free and open source software for running judo tournaments. The software is currently in the alpha stage and releases are posted on <a href="https://github.com/judoassistant/judoassistant/releases">Github</a>. More info coming soon™.</p>
+        <p>JudoAssistant is free and open source software for running judo tournaments. The software is currently in the beta stage and releases are posted on <a href="https://github.com/judoassistant/judoassistant/releases">Github</a>. More info coming soon™.</p>
       </div>
     </div>
   </div>
